; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_sigmatel.c_stac_update_outputs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_sigmatel.c_stac_update_outputs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_codec = type { i32, %struct.sigmatel_spec* }
%struct.sigmatel_spec = type { i32, i32, i32, i32, i32, %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32, i64 }

@AC_VERB_GET_GPIO_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_codec*)* @stac_update_outputs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stac_update_outputs(%struct.hda_codec* %0) #0 {
  %2 = alloca %struct.hda_codec*, align 8
  %3 = alloca %struct.sigmatel_spec*, align 8
  %4 = alloca i32, align 4
  store %struct.hda_codec* %0, %struct.hda_codec** %2, align 8
  %5 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %6 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %5, i32 0, i32 1
  %7 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %6, align 8
  store %struct.sigmatel_spec* %7, %struct.sigmatel_spec** %3, align 8
  %8 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %9 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %29

12:                                               ; preds = %1
  %13 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %14 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %15 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* @AC_VERB_GET_GPIO_DATA, align 4
  %18 = call i32 @snd_hda_codec_read(%struct.hda_codec* %13, i32 %16, i32 0, i32 %17, i32 0)
  %19 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %20 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = and i32 %18, %21
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %27 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %26, i32 0, i32 5
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 %25, i32* %28, align 8
  br label %29

29:                                               ; preds = %12, %1
  %30 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %31 = call i32 @snd_hda_gen_update_outputs(%struct.hda_codec* %30)
  %32 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %33 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %80

36:                                               ; preds = %29
  %37 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %38 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %37, i32 0, i32 6
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %80

41:                                               ; preds = %36
  %42 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %43 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  store i32 %44, i32* %4, align 4
  %45 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %46 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %45, i32 0, i32 5
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %57

50:                                               ; preds = %41
  %51 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %52 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %51, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = xor i32 %53, -1
  %55 = load i32, i32* %4, align 4
  %56 = and i32 %55, %54
  store i32 %56, i32* %4, align 4
  br label %63

57:                                               ; preds = %41
  %58 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %59 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %58, i32 0, i32 1
  %60 = load i32, i32* %59, align 4
  %61 = load i32, i32* %4, align 4
  %62 = or i32 %61, %60
  store i32 %62, i32* %4, align 4
  br label %63

63:                                               ; preds = %57, %50
  %64 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %65 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %64, i32 0, i32 2
  %66 = load i32, i32* %65, align 8
  %67 = load i32, i32* %4, align 4
  %68 = icmp ne i32 %66, %67
  br i1 %68, label %69, label %79

69:                                               ; preds = %63
  %70 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %71 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %72 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %71, i32 0, i32 4
  %73 = load i32, i32* %72, align 8
  %74 = load %struct.sigmatel_spec*, %struct.sigmatel_spec** %3, align 8
  %75 = getelementptr inbounds %struct.sigmatel_spec, %struct.sigmatel_spec* %74, i32 0, i32 3
  %76 = load i32, i32* %75, align 4
  %77 = load i32, i32* %4, align 4
  %78 = call i32 @stac_gpio_set(%struct.hda_codec* %70, i32 %73, i32 %76, i32 %77)
  br label %79

79:                                               ; preds = %69, %63
  br label %80

80:                                               ; preds = %79, %36, %29
  ret void
}

declare dso_local i32 @snd_hda_codec_read(%struct.hda_codec*, i32, i32, i32, i32) #1

declare dso_local i32 @snd_hda_gen_update_outputs(%struct.hda_codec*) #1

declare dso_local i32 @stac_gpio_set(%struct.hda_codec*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
